fix(eclipse-plugin): URL deprecation 제거 + 코드 검증 완료
- OllamaClient: new URL(String) -> URI.create(...).toURL() (JDK21에서도 경고 없음)
- 핵심 로직 4파일(JsonUtil/Json/OllamaClient/OllamaAgent) javac -Xlint:all 클린 컴파일
- 단위 검증 통과: JSON 파싱/재직렬화 13건, Agent 도구 실행 19건
  (apply_edit 유일/미발견/모호/사용자거부, create/write/search/list/run_command/경로차단 등)